--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="text_above">
         У лукоморья дуб зеленей;\n
         Златая цепь на дубе том:\n
-        И днем, и ночью <b>кот ученый</b>\n
+        И днем, и ночью <b>кот Зеленый</b>\n
         Все ходит по цепи кругом;\n
         Идет <b>направо</b> - песнь заводит,\n
         <b>Налево</b> - сказку говорит.
