--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,9 @@
     <string name="sherlockChooseButton">Помочь Шерлоку!</string>
 
     <string name="text_above">
-        У лукоморья дуб зеленей;\n
+        У лукоморья дуб ученый;\n
         Златая цепь на дубе том:\n
-        И днем, и ночью <b>кот Зеленый</b>\n
+        И днем, и утром <b>кот Зеленый</b>\n
         Все ходит по цепи кругом;\n
         Идет <b>направо</b> - песнь заводит,\n
         <b>Налево</b> - сказку говорит.
