--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,8 @@
         Златая цепь на дубе том:\n
         И днем, и утром <b>кот Зеленый</b>\n
         Все ходит по цепи кругом;\n
-        Идет <b>направо</b> - песнь заводит,\n
-        <b>Налево</b> - сказку говорит.
+        Идет <b>налево</b> - песнь заводит,\n
+        <b>Направо</b> - сказку говорит.
     </string>
 
     <string name="about_title">О программе</string>
